lexer/Parser.output
   0  $accept : %entry% $end

   1  program : stmt_list T_EOF

   2  stmt_list :
   3            | stmt_list letdef
   4            | stmt_list typedef

   5  letdef : T_LET recmb def anddef

   6  recmb :
   7        | T_REC

   8  anddef :
   9         | anddef T_ANDDEF def

  10  def : T_ID parstar colontype T_SEQ expr
  11      | T_MUTABLE T_ID colontype
  12      | T_MUTABLE T_ID T_LBRACK expr comaexpr T_RBRACK colontype

  13  parstar :
  14          | parstar T_ID
  15          | parstar T_LPAR T_ID T_COLON types T_RPAR

  16  colontype :
  17            | T_COLON types

  18  typedef : T_TYPE tdef andtdefstar

  19  andtdefstar :
  20              | andtdefstar T_ANDDEF tdef

  21  tdef : T_ID T_SEQ constr constrbar

  22  constrbar :
  23            | constrbar T_BAR constr

  24  constr : T_CID oftype

  25  oftype :
  26         | oftype T_OF typeplus

  27  typeplus : types
  28           | typeplus types

  29  types : T_UNIT
  30        | T_INTST
  31        | T_CHAR
  32        | T_BOOL
  33        | T_FLOATST
  34        | T_LPAR types T_RPAR
  35        | types T_GIVES types
  36        | types T_REF
  37        | T_ARRAY starlist T_OF types
  38        | T_ID

  39  starlist :
  40           | T_LBRACK T_TIMES comastar T_RBRACK

  41  comastar :
  42           | comastar T_COMA T_TIMES

  43  expr : expr T_FPLUS expr
  44       | expr T_PLUS expr
  45       | expr T_MINUS expr
  46       | expr T_FMINUS expr
  47       | expr T_TIMES expr
  48       | expr T_FTIMES expr
  49       | expr T_DIV expr
  50       | expr T_FDIV expr
  51       | expr T_MOD expr
  52       | expr T_POWER expr
  53       | expr T_SEQ expr
  54       | expr T_NSEQ expr
  55       | expr T_L expr
  56       | expr T_G expr
  57       | expr T_LE expr
  58       | expr T_GE expr
  59       | expr T_EQ expr
  60       | expr T_NEQ expr
  61       | expr T_AND expr
  62       | expr T_OR expr
  63       | expr T_SMCOLON expr
  64       | expr T_ASSIGN expr
  65       | T_PLUS expr
  66       | T_FPLUS expr
  67       | T_FMINUS expr
  68       | T_MINUS expr
  69       | T_DELETE expr
  70       | T_BEGIN expr T_END
  71       | T_WHILE expr T_DO expr T_DONE
  72       | T_FOR T_ID T_SEQ expr count expr T_DO expr T_DONE
  73       | T_DIM intmb T_ID
  74       | T_NEW types
  75       | T_IF expr T_THEN expr T_ELSE expr
  76       | T_IF expr T_THEN expr
  77       | letdef T_IN expr
  78       | T_MATCH expr T_WITH clause clausestar T_END
  79       | T_CID atomstar
  80       | T_ID atomstar
  81       | atom

  82  atom : T_INT
  83       | T_FLOAT
  84       | T_CONSTCHAR
  85       | T_STRING
  86       | T_TRUE
  87       | T_FALSE
  88       | T_LPAR T_RPAR
  89       | T_CID
  90       | T_ID
  91       | T_NOT atom
  92       | T_BANK atom
  93       | T_ID T_LBRACK expr comaexpr T_RBRACK
  94       | T_LPAR expr T_RPAR

  95  comaexpr :
  96           | comaexpr T_COMA expr

  97  atomstar : atom
  98           | atom atomstar

  99  count : T_TO
 100        | T_DOWNTO

 101  intmb :
 102        | T_INT

 103  clausestar :
 104             | clausestar T_BAR clause

 105  clause : pattern T_GIVES expr

 106  pattern : pattom
 107          | T_CID patternstar

 108  pattom : sign T_INT
 109         | fsign T_FLOAT
 110         | T_CONSTCHAR
 111         | T_TRUE
 112         | T_FALSE
 113         | T_ID
 114         | T_CID
 115         | T_LPAR pattern T_RPAR

 116  patternstar : pattom
 117              | patternstar pattom

 118  sign : T_PLUS
 119       | T_MINUS

 120  fsign : T_FPLUS
 121        | T_FMINUS

 122  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (122)
	stmt_list : .  (2)

	.  reduce 2

	program  goto 3
	stmt_list  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (122)

	.  reduce 122


state 4
	program : stmt_list . T_EOF  (1)
	stmt_list : stmt_list . letdef  (3)
	stmt_list : stmt_list . typedef  (4)

	T_EOF  shift 5
	T_LET  shift 6
	T_TYPE  shift 7
	.  error

	letdef  goto 8
	typedef  goto 9


state 5
	program : stmt_list T_EOF .  (1)

	.  reduce 1


state 6
	letdef : T_LET . recmb def anddef  (5)
	recmb : .  (6)

	T_REC  shift 10
	T_MUTABLE  reduce 6
	T_ID  reduce 6

	recmb  goto 11


state 7
	typedef : T_TYPE . tdef andtdefstar  (18)

	T_ID  shift 12
	.  error

	tdef  goto 13


state 8
	stmt_list : stmt_list letdef .  (3)

	.  reduce 3


state 9
	stmt_list : stmt_list typedef .  (4)

	.  reduce 4


state 10
	recmb : T_REC .  (7)

	.  reduce 7


state 11
	letdef : T_LET recmb . def anddef  (5)

	T_MUTABLE  shift 14
	T_ID  shift 15
	.  error

	def  goto 16


state 12
	tdef : T_ID . T_SEQ constr constrbar  (21)

	T_SEQ  shift 17
	.  error


state 13
	typedef : T_TYPE tdef . andtdefstar  (18)
	andtdefstar : .  (19)

	.  reduce 19

	andtdefstar  goto 18


state 14
	def : T_MUTABLE . T_ID colontype  (11)
	def : T_MUTABLE . T_ID T_LBRACK expr comaexpr T_RBRACK colontype  (12)

	T_ID  shift 19
	.  error


state 15
	def : T_ID . parstar colontype T_SEQ expr  (10)
	parstar : .  (13)

	.  reduce 13

	parstar  goto 20


state 16
	letdef : T_LET recmb def . anddef  (5)
	anddef : .  (8)

	.  reduce 8

	anddef  goto 21


state 17
	tdef : T_ID T_SEQ . constr constrbar  (21)

	T_CID  shift 22
	.  error

	constr  goto 23


state 18
	typedef : T_TYPE tdef andtdefstar .  (18)
	andtdefstar : andtdefstar . T_ANDDEF tdef  (20)

	T_ANDDEF  shift 24
	T_EOF  reduce 18
	T_LET  reduce 18
	T_TYPE  reduce 18


state 19
	def : T_MUTABLE T_ID . colontype  (11)
	def : T_MUTABLE T_ID . T_LBRACK expr comaexpr T_RBRACK colontype  (12)
	colontype : .  (16)

	T_LBRACK  shift 25
	T_COLON  shift 26
	T_EOF  reduce 16
	T_ANDDEF  reduce 16
	T_IN  reduce 16
	T_LET  reduce 16
	T_TYPE  reduce 16

	colontype  goto 27


state 20
	def : T_ID parstar . colontype T_SEQ expr  (10)
	parstar : parstar . T_ID  (14)
	parstar : parstar . T_LPAR T_ID T_COLON types T_RPAR  (15)
	colontype : .  (16)

	T_ID  shift 28
	T_LPAR  shift 29
	T_COLON  shift 26
	T_SEQ  reduce 16

	colontype  goto 30


state 21
	letdef : T_LET recmb def anddef .  (5)
	anddef : anddef . T_ANDDEF def  (9)

	T_ANDDEF  shift 31
	T_EOF  reduce 5
	T_IN  reduce 5
	T_LET  reduce 5
	T_TYPE  reduce 5


state 22
	constr : T_CID . oftype  (24)
	oftype : .  (25)

	.  reduce 25

	oftype  goto 32


state 23
	tdef : T_ID T_SEQ constr . constrbar  (21)
	constrbar : .  (22)

	.  reduce 22

	constrbar  goto 33


state 24
	andtdefstar : andtdefstar T_ANDDEF . tdef  (20)

	T_ID  shift 12
	.  error

	tdef  goto 34


state 25
	def : T_MUTABLE T_ID T_LBRACK . expr comaexpr T_RBRACK colontype  (12)

	T_BEGIN  shift 35
	T_DELETE  shift 36
	T_DIM  shift 37
	T_FOR  shift 38
	T_IF  shift 39
	T_LET  shift 6
	T_MATCH  shift 40
	T_NEW  shift 41
	T_NOT  shift 42
	T_WHILE  shift 43
	T_ID  shift 44
	T_CID  shift 45
	T_FLOAT  shift 46
	T_INT  shift 47
	T_CONSTCHAR  shift 48
	T_STRING  shift 49
	T_FALSE  shift 50
	T_TRUE  shift 51
	T_PLUS  shift 52
	T_MINUS  shift 53
	T_FPLUS  shift 54
	T_FMINUS  shift 55
	T_BANK  shift 56
	T_LPAR  shift 57
	.  error

	letdef  goto 58
	expr  goto 59
	atom  goto 60


state 26
	colontype : T_COLON . types  (17)

	T_ARRAY  shift 61
	T_ID  shift 62
	T_CHAR  shift 63
	T_BOOL  shift 64
	T_UNIT  shift 65
	T_FLOATST  shift 66
	T_INTST  shift 67
	T_LPAR  shift 68
	.  error

	types  goto 69


state 27
	def : T_MUTABLE T_ID colontype .  (11)

	.  reduce 11


state 28
	parstar : parstar T_ID .  (14)

	.  reduce 14


state 29
	parstar : parstar T_LPAR . T_ID T_COLON types T_RPAR  (15)

	T_ID  shift 70
	.  error


state 30
	def : T_ID parstar colontype . T_SEQ expr  (10)

	T_SEQ  shift 71
	.  error


state 31
	anddef : anddef T_ANDDEF . def  (9)

	T_MUTABLE  shift 14
	T_ID  shift 15
	.  error

	def  goto 72


state 32
	constr : T_CID oftype .  (24)
	oftype : oftype . T_OF typeplus  (26)

	T_OF  shift 73
	T_EOF  reduce 24
	T_ANDDEF  reduce 24
	T_LET  reduce 24
	T_TYPE  reduce 24
	T_BAR  reduce 24


state 33
	tdef : T_ID T_SEQ constr constrbar .  (21)
	constrbar : constrbar . T_BAR constr  (23)

	T_BAR  shift 74
	T_EOF  reduce 21
	T_ANDDEF  reduce 21
	T_LET  reduce 21
	T_TYPE  reduce 21


state 34
	andtdefstar : andtdefstar T_ANDDEF tdef .  (20)

	.  reduce 20


state 35
	expr : T_BEGIN . expr T_END  (70)

	T_BEGIN  shift 35
	T_DELETE  shift 36
	T_DIM  shift 37
	T_FOR  shift 38
	T_IF  shift 39
	T_LET  shift 6
	T_MATCH  shift 40
	T_NEW  shift 41
	T_NOT  shift 42
	T_WHILE  shift 43
	T_ID  shift 44
	T_CID  shift 45
	T_FLOAT  shift 46
	T_INT  shift 47
	T_CONSTCHAR  shift 48
	T_STRING  shift 49
	T_FALSE  shift 50
	T_TRUE  shift 51
	T_PLUS  shift 52
	T_MINUS  shift 53
	T_FPLUS  shift 54
	T_FMINUS  shift 55
	T_BANK  shift 56
	T_LPAR  shift 57
	.  error

	letdef  goto 58
	expr  goto 75
	atom  goto 60


state 36
	expr : T_DELETE . expr  (69)

	T_BEGIN  shift 35
	T_DELETE  shift 36
	T_DIM  shift 37
	T_FOR  shift 38
	T_IF  shift 39
	T_LET  shift 6
	T_MATCH  shift 40
	T_NEW  shift 41
	T_NOT  shift 42
	T_WHILE  shift 43
	T_ID  shift 44
	T_CID  shift 45
	T_FLOAT  shift 46
	T_INT  shift 47
	T_CONSTCHAR  shift 48
	T_STRING  shift 49
	T_FALSE  shift 50
	T_TRUE  shift 51
	T_PLUS  shift 52
	T_MINUS  shift 53
	T_FPLUS  shift 54
	T_FMINUS  shift 55
	T_BANK  shift 56
	T_LPAR  shift 57
	.  error

	letdef  goto 58
	expr  goto 76
	atom  goto 60


state 37
	expr : T_DIM . intmb T_ID  (73)
	intmb : .  (101)

	T_INT  shift 77
	T_ID  reduce 101

	intmb  goto 78


state 38
	expr : T_FOR . T_ID T_SEQ expr count expr T_DO expr T_DONE  (72)

	T_ID  shift 79
	.  error


state 39
	expr : T_IF . expr T_THEN expr T_ELSE expr  (75)
	expr : T_IF . expr T_THEN expr  (76)

	T_BEGIN  shift 35
	T_DELETE  shift 36
	T_DIM  shift 37
	T_FOR  shift 38
	T_IF  shift 39
	T_LET  shift 6
	T_MATCH  shift 40
	T_NEW  shift 41
	T_NOT  shift 42
	T_WHILE  shift 43
	T_ID  shift 44
	T_CID  shift 45
	T_FLOAT  shift 46
	T_INT  shift 47
	T_CONSTCHAR  shift 48
	T_STRING  shift 49
	T_FALSE  shift 50
	T_TRUE  shift 51
	T_PLUS  shift 52
	T_MINUS  shift 53
	T_FPLUS  shift 54
	T_FMINUS  shift 55
	T_BANK  shift 56
	T_LPAR  shift 57
	.  error

	letdef  goto 58
	expr  goto 80
	atom  goto 60


state 40
	expr : T_MATCH . expr T_WITH clause clausestar T_END  (78)

	T_BEGIN  shift 35
	T_DELETE  shift 36
	T_DIM  shift 37
	T_FOR  shift 38
	T_IF  shift 39
	T_LET  shift 6
	T_MATCH  shift 40
	T_NEW  shift 41
	T_NOT  shift 42
	T_WHILE  shift 43
	T_ID  shift 44
	T_CID  shift 45
	T_FLOAT  shift 46
	T_INT  shift 47
	T_CONSTCHAR  shift 48
	T_STRING  shift 49
	T_FALSE  shift 50
	T_TRUE  shift 51
	T_PLUS  shift 52
	T_MINUS  shift 53
	T_FPLUS  shift 54
	T_FMINUS  shift 55
	T_BANK  shift 56
	T_LPAR  shift 57
	.  error

	letdef  goto 58
	expr  goto 81
	atom  goto 60


state 41
	expr : T_NEW . types  (74)

	T_ARRAY  shift 61
	T_ID  shift 62
	T_CHAR  shift 63
	T_BOOL  shift 64
	T_UNIT  shift 65
	T_FLOATST  shift 66
	T_INTST  shift 67
	T_LPAR  shift 68
	.  error

	types  goto 82


state 42
	atom : T_NOT . atom  (91)

	T_NOT  shift 42
	T_ID  shift 83
	T_CID  shift 84
	T_FLOAT  shift 46
	T_INT  shift 47
	T_CONSTCHAR  shift 48
	T_STRING  shift 49
	T_FALSE  shift 50
	T_TRUE  shift 51
	T_BANK  shift 56
	T_LPAR  shift 57
	.  error

	atom  goto 85


state 43
	expr : T_WHILE . expr T_DO expr T_DONE  (71)

	T_BEGIN  shift 35
	T_DELETE  shift 36
	T_DIM  shift 37
	T_FOR  shift 38
	T_IF  shift 39
	T_LET  shift 6
	T_MATCH  shift 40
	T_NEW  shift 41
	T_NOT  shift 42
	T_WHILE  shift 43
	T_ID  shift 44
	T_CID  shift 45
	T_FLOAT  shift 46
	T_INT  shift 47
	T_CONSTCHAR  shift 48
	T_STRING  shift 49
	T_FALSE  shift 50
	T_TRUE  shift 51
	T_PLUS  shift 52
	T_MINUS  shift 53
	T_FPLUS  shift 54
	T_FMINUS  shift 55
	T_BANK  shift 56
	T_LPAR  shift 57
	.  error

	letdef  goto 58
	expr  goto 86
	atom  goto 60


state 44
	expr : T_ID . atomstar  (80)
	atom : T_ID .  (90)
	atom : T_ID . T_LBRACK expr comaexpr T_RBRACK  (93)

	T_NOT  shift 42
	T_ID  shift 83
	T_CID  shift 84
	T_FLOAT  shift 46
	T_INT  shift 47
	T_CONSTCHAR  shift 48
	T_STRING  shift 49
	T_FALSE  shift 50
	T_TRUE  shift 51
	T_BANK  shift 56
	T_LPAR  shift 57
	T_LBRACK  shift 87
	T_EOF  reduce 90
	T_ANDDEF  reduce 90
	T_DO  reduce 90
	T_DONE  reduce 90
	T_DOWNTO  reduce 90
	T_ELSE  reduce 90
	T_END  reduce 90
	T_IN  reduce 90
	T_LET  reduce 90
	T_THEN  reduce 90
	T_TO  reduce 90
	T_TYPE  reduce 90
	T_WITH  reduce 90
	T_SEQ  reduce 90
	T_BAR  reduce 90
	T_PLUS  reduce 90
	T_MINUS  reduce 90
	T_TIMES  reduce 90
	T_DIV  reduce 90
	T_MOD  reduce 90
	T_FPLUS  reduce 90
	T_FMINUS  reduce 90
	T_FTIMES  reduce 90
	T_FDIV  reduce 90
	T_POWER  reduce 90
	T_SMCOLON  reduce 90
	T_AND  reduce 90
	T_OR  reduce 90
	T_NSEQ  reduce 90
	T_L  reduce 90
	T_G  reduce 90
	T_LE  reduce 90
	T_GE  reduce 90
	T_EQ  reduce 90
	T_NEQ  reduce 90
	T_ASSIGN  reduce 90
	T_RPAR  reduce 90
	T_RBRACK  reduce 90
	T_COMA  reduce 90

	atomstar  goto 88
	atom  goto 89


state 45
	expr : T_CID . atomstar  (79)
	atom : T_CID .  (89)

	T_NOT  shift 42
	T_ID  shift 83
	T_CID  shift 84
	T_FLOAT  shift 46
	T_INT  shift 47
	T_CONSTCHAR  shift 48
	T_STRING  shift 49
	T_FALSE  shift 50
	T_TRUE  shift 51
	T_BANK  shift 56
	T_LPAR  shift 57
	T_EOF  reduce 89
	T_ANDDEF  reduce 89
	T_DO  reduce 89
	T_DONE  reduce 89
	T_DOWNTO  reduce 89
	T_ELSE  reduce 89
	T_END  reduce 89
	T_IN  reduce 89
	T_LET  reduce 89
	T_THEN  reduce 89
	T_TO  reduce 89
	T_TYPE  reduce 89
	T_WITH  reduce 89
	T_SEQ  reduce 89
	T_BAR  reduce 89
	T_PLUS  reduce 89
	T_MINUS  reduce 89
	T_TIMES  reduce 89
	T_DIV  reduce 89
	T_MOD  reduce 89
	T_FPLUS  reduce 89
	T_FMINUS  reduce 89
	T_FTIMES  reduce 89
	T_FDIV  reduce 89
	T_POWER  reduce 89
	T_SMCOLON  reduce 89
	T_AND  reduce 89
	T_OR  reduce 89
	T_NSEQ  reduce 89
	T_L  reduce 89
	T_G  reduce 89
	T_LE  reduce 89
	T_GE  reduce 89
	T_EQ  reduce 89
	T_NEQ  reduce 89
	T_ASSIGN  reduce 89
	T_RPAR  reduce 89
	T_RBRACK  reduce 89
	T_COMA  reduce 89

	atomstar  goto 90
	atom  goto 89


state 46
	atom : T_FLOAT .  (83)

	.  reduce 83


state 47
	atom : T_INT .  (82)

	.  reduce 82


state 48
	atom : T_CONSTCHAR .  (84)

	.  reduce 84


state 49
	atom : T_STRING .  (85)

	.  reduce 85


state 50
	atom : T_FALSE .  (87)

	.  reduce 87


state 51
	atom : T_TRUE .  (86)

	.  reduce 86


state 52
	expr : T_PLUS . expr  (65)
